# Payment/src/api/cmd/api/main.go
@@ -63,7 +63,7 @@ func main() {
 	api.HandleFunc("GET /health", handlers.HealthCheck)
 	api.HandleFunc("GET /accounts/{user_id}", handlers.GetAccount)
 	api.HandleFunc("GET /accounts/{user_id}/payments", handlers.GetPayments)
-	api.HandleFunc("GET /payments/{id}", handlers.GetPayment)
+	api.HandleFunc("GET /accounts/{user_id}/payments/{id}", handlers.GetPayment)
 	api.HandleFunc("POST /accounts", handlers.CreateAccount)
 	api.HandleFunc("POST /payments", handlers.CreatePayment)
 
